DCS-1582 fixing squashed images (#238)

--- a/assets/sass/components/_transfer-card.scss
+++ b/assets/sass/components/_transfer-card.scss
@@ -7,6 +7,3 @@
   padding-top: 15px;
 }
 
-.prisoner-image-transfer{
-  width: 7em
-}
